# lib_simplex_io

./: .clang-format  CMakeLists.txt  lib_simplex_io.code-workspace
include/lib_simplex_io/: read_data.hpp  read_file.hpp  types.hpp  write_data.hpp
include/simplex_io/: conversion.hpp  read_data.hpp  types.hpp  write_data.hpp
src/: conversion.cpp  parser_types.hpp  read_data.cpp  read_file.cpp  write_data.cpp
tests/: CMakeLists.txt  conversion_test.cpp  read_data_test.cpp  write_data_test.cpp
